--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ crashlytics-build.properties
 *.zip
 *.7z
 *.rar
+TCC_Game/ProjectSettings/ProjectSettings.asset
+TCC_Game/ProjectSettings/EditorBuildSettings.asset
+TCC_Game/ProjectSettings/EditorBuildSettings.asset
